[package]
name = "tournament_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
axum = "0.4.3"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.2.0", features = ["trace", "map-response-body"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower = "0.4.11"
rand = "0.8.4"
futures = "0.3.19"
serde_json = "1.0.73"